# Curvature-Onto-Voxelised-Surfaces

./: .gitignore  CMakeLists.txt  core.cpp  evaluateShape.cpp  main.cpp  readme.md
DGtalObjects/: al-150x150x150.vol  bretzel.vol  bunny33.vol  bunny65.vol  cms-50-30.vol  cps-50-30.vol  cps-55-25-n3.vol  cps-55-25-n5.vol  cps-55-25-n6.vol  cps-55-25.vol  fandisk-128.vol
